# pythianRisk

./: .gitignore  LICENSE  README.md  compileprotos.sh  main.py  pyproject.toml  requirements.txt
contracts/: README.txt  projection_pb2.py  projection_pb2_grpc.py
data/: Eq.csv  sp500.csv
notebooks/: datadownloader.ipynb  lstm_ml.ipynb
proto/: projection.proto
regression/: heding.py  regime_base.py
