[project]
name = "pythianrisk"
version = "0.1.0"
description = "Risk quantitiative models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=7.2.0",
    "cvxpy>=1.6.4",
    "grpcio-tools>=1.71.0",
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.11",
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "protobuf>=5.29.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
